--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,2 +1,8 @@
+v1.1 - March 11th, 2017
+o Added support for SMF 2.1 Beta 2.
+o Fixed undefined error when using context variable without folder.
+o Fixed issue where "To:" was shown in Inbox and "From:" for Sent and Outbox.
+o Added Russian translation, courtsey of [url=http://www.simplemachines.org/community/index.php?action=profile;u=97557]digger[/url]!
+
 v1.0 - February 25th, 2017
 o Initial release to the public
