--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+v1.3 - March 30th, 2017
+o Fixed installation issue that conflicts with [url=http://www.simplemachines.org/community/index.php?topic=524832.0]Search Sent Personal Messages (PMs)[/url]
+
 v1.2 - March 13th, 2017
 o Fixed documentation issue within the [b]readme.txt[/b] file.
 o No other changes made to the mod.
