--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+v1.4 - July 5th, 2017
+o Fixed database query error in [b]Sources\PersonalMessages.php[/b].  Thanks, [url=https://www.simplemachines.org/community/index.php?action=profile;u=112942]GL700Wing[/url]!!!
+
 v1.3 - March 30th, 2017
 o Fixed installation issue that conflicts with [url=http://www.simplemachines.org/community/index.php?topic=524832.0]Search Sent Personal Messages (PMs)[/url]
 
